--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -656,3 +656,59 @@ img {
     opacity: 1;
     visibility: visible;
 }
+
+.portifolio__container {
+    overflow: initial;
+}
+
+.portifolio__content {
+    padding: 0 1.5rem;
+}
+
+.portifolio__img {
+    width: 265px;
+    border-radius: .5rem;
+    justify-content: center;
+}
+
+.portifolio__title {
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.portifolio__description {
+    margin-bottom: var(--mb-0-75);
+}
+
+.portifolio__button:hover .button__icon {
+    transform: translateX(.25rem);
+}
+
+.swiper-button-prev::after, .swiper-button-next::after {
+    content: '';
+}
+
+.swiper-portifolio-icon {
+    font-size: 2rem;
+    color: var(--first-color);
+}
+
+.swiper-button-prev {
+    left: -.5rem;
+}
+
+.swiper-button-next {
+    right: -.5rem;
+}
+
+.swiper-container-horizontal > .swiper-pagination-bullet {
+    bottom: -2.5rem;
+}
+
+.swiper-pagination-bullet-active {
+    background: var(--first-color);
+}
+
+.swiper-button-prev, .swiper-button-next, .swiper-pagination-bullet {
+    outline: none;
+}
